--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
 		<div class="jumbotron">
                
-			<h1 class="text-center"><i class="fas fa-utensils"></i> Some Restaurant</h1>
+			<h1 class="text-center"><i class="fas fa-utensils"></i> Haute Restaurant</h1>
 			<hr>
 			<h2 class="text-center">Make A Reservation!</h2>
 			<br>
 
 			<div class="text-center">
-				<a href="/tables"><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button></a>
-				<a href="/reserve"><button type="button" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button></a>
+				<a href="/tables.html"><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button></a>
+				<a href="/reserve.html"><button type="button" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button></a>
 			</div>
 
 		</div>
