--- a/home.html
+++ b/home.html
@@ -29,6 +29,7 @@
 
     <footer class="footer">
       <div class="container">
+			<p> contact us at 555-555-5555</p>
       </div>
     </footer>
 
