--- a/home.html
+++ b/home.html
@@ -7,13 +7,15 @@
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
-                crossorigin="anonymous">
+				crossorigin="anonymous">
+				<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
 
 	<div class="container">
 
-		<div class="jumbotron">
+		<div class="jumbotron myJumbo">
                
 			<h1 class="text-center"><i class="fas fa-utensils"></i> Haute Restaurant</h1>
 			<hr>
