--- a/reserve.html
+++ b/reserve.html
@@ -8,13 +8,14 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 <body>
 
 	<div class="container">
 
-		<div class="jumbotron">
+		<div class="jumbotron myJumbo">
 			<h1 class="text-center"><i class="fas fa-utensils"></i></span> Haute Restaurant</h1>
 			<hr>
 			<h2 class="text-center">Make your reservation</h2>
