fixed a couple name bugs

--- a/public/tables.html
+++ b/public/tables.html
@@ -18,7 +18,7 @@
             <h2 class="text-center">Current Reservations and Waiting List</h2>
             <br>
             <div class="text-center">
-                <a href="/reserve">
+                <a href="/reserve.html">
                     <button class="btn btn-lg btn-danger">
                         <span class="fa fa-credit-card"></span> Make Reservation</button>
                 </a>
