--- a/public/reserve.html
+++ b/public/reserve.html
@@ -23,7 +23,7 @@
 
 			<div class="text-center">
 				<a href="/tables.html"><button type="button" class="btn btn-success"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button></a>
-				<a href="home.html"><button type="button" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-home"></span></button></a>
+				<a href="/"><button type="button" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-home"></span></button></a>
 			</div>
 		</div>
 
@@ -92,10 +92,10 @@
 
 		// Here we grab the form elements
 		var newReservation = {
-			customerName: $('#reserve_name').val().trim(),
-			phoneNumber: $('#reserve_phone').val().trim(),
-			customerEmail: $('#reserve_email').val().trim(),
-			customerID: $('#reserve_uniqueID').val().trim()
+			name: $('#reserve_name').val().trim(),
+			phone: $('#reserve_phone').val().trim(),
+			email: $('#reserve_email').val().trim(),
+			ID: $('#reserve_uniqueID').val().trim()
 		};
 
 		console.log(newReservation);
