--- a/public/reserve.html
+++ b/public/reserve.html
@@ -92,10 +92,10 @@
 
 		// Here we grab the form elements
 		var newReservation = {
+			ID: $('#reserve_uniqueID').val().trim(),
 			name: $('#reserve_name').val().trim(),
 			phone: $('#reserve_phone').val().trim(),
-			email: $('#reserve_email').val().trim(),
-			ID: $('#reserve_uniqueID').val().trim()
+			email: $('#reserve_email').val().trim()
 		};
 
 		console.log(newReservation);
