--- a/public/menu.html
+++ b/public/menu.html
@@ -29,6 +29,10 @@
                         <span class="fa fa-home"></span>
                     </button>
                 </a>
+                <a href="menu.html">
+                        <button class="btn btn-lg btn-danger">
+                            <span class="fa fa-credit-card"></span> Menu </button>
+                    </a>
             </div>
         </div>
         <div class="row">
