--- a/public/reserve.html
+++ b/public/reserve.html
@@ -24,6 +24,7 @@
 			<div class="text-center">
 				<a href="tables.html"><button type="button" class="btn btn-success"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button></a>
 				<a href="index.html"><button type="button" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-home"></span></button></a>
+				<a href="menu.html"><button type="button" class="btn btn-success"><span class="glyphicon glyphicon-list-alt"></span> Menu </button></a>
 			</div>
 		</div>
 
