--- a/public/menu.html
+++ b/public/menu.html
@@ -21,7 +21,7 @@
             <br>
             <div class="text-center">
                 <a href="reserve.html">
-                    <button class="btn btn-lg btn-danger">
+                    <button class="btn btn-lg btn-primary">
                         <span class="fa fa-credit-card"></span> Make Reservation</button>
                 </a>
                 <a href="index.html">
@@ -30,7 +30,7 @@
                     </button>
                 </a>
                 <a href="menu.html">
-                        <button class="btn btn-lg btn-danger">
+                        <button class="btn btn-lg btn-primary">
                             <span class="fa fa-credit-card"></span> Menu </button>
                     </a>
             </div>
@@ -43,17 +43,13 @@
                     </div>
                     <div class="card-body">
                         <ul id="tableList" class="list-group">
-                            <h4>Padstickers $55</h4>
-                            <small id="description" class="form-text text-muted">Explore food on tablet.</small>
-
+                            <h4>Padstickers</h4>
                             <img src="https://i.dailymail.co.uk/i/pix/2015/05/10/22/288A920A00000578-0-image-m-14_1431293376749.jpg">
                             <br>
-                            <h4>Oreiller du Meringue $95 </h4>
-                            <small id="description" class="form-text text-muted">Ask the check before you order this one.</small>
+                            <h4>Oreiller du Meringue </h4>
                             <img src="https://i.imgur.com/7Gkkqe7.jpg">
                             <br>
-                            <h4>Haute Pot $120</h4>
-                            <small id="description" class="form-text text-muted">Some kind of broth or soup served on a toilet bowl.</small>
+                            <h4>Haute Pot</h4>
                             <img src="https://i.pinimg.com/originals/40/ce/93/40ce930c1de282adb98cc7ab71ade534.jpg">
                         </ul>
                     </div>
