--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
 			<div class="text-center">
 				<a href="tables.html"><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button></a>
-				<a href="reserve.html"><button type="button" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button></a>
+				<a href="reserve.html"><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button></a>
 				<a href="menu.html"><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-list-alt"></span> Menu </button></a>
 
 			</div>
@@ -38,7 +38,7 @@
 
 	</div>
 
-
+	<div style="text-align:center;"><script type="text/javascript" src="http://services.webestools.com/cpt_pages_views/63645-11-5.js"></script></div>
 </body>
 </html>
 
