--- a/public/tables.html
+++ b/public/tables.html
@@ -21,16 +21,16 @@
             <br>
             <div class="text-center">
                 <a href="reserve.html">
-                    <button class="btn btn-lg btn-danger">
+                    <button class="btn btn-lg btn-primary">
                         <span class="fa fa-credit-card"></span> Make Reservation</button>
                 </a>
                 <a href="index.html">
-                    <button class="btn btn-lg btn-default">
+                    <button class="btn btn-lg btn-primary">
                         <span class="fa fa-home"></span>
                     </button>
                 </a>
                 <a href="reserve.html">
-                        <button class="btn btn-lg btn-danger">
+                        <button class="btn btn-lg btn-primary">
                             <span class="fa fa-credit-card"></span> Menu </button>
                 </a>
             </div>
@@ -122,9 +122,11 @@
                 });
         }
         function clearTable() {
-            $("#waitList").empty();
-            $("#tableList").empty();
-            $.ajax({ url: "/api/clear", method: "POST" });
+            //alert("Clearing...");
+            $.ajax({ url: "/api/clear", method: "POST" }).then(function () {
+                $("#waitList").empty();
+                $("#tableList").empty();
+            });
         }
         $("#clear").on("click", clearTable);
         runTableQuery();
