--- a/public/menu.html
+++ b/public/menu.html
@@ -43,13 +43,16 @@
                     </div>
                     <div class="card-body">
                         <ul id="tableList" class="list-group">
-                            <h4>Padstickers</h4>
+                            <h4>Padstickers $89</h4>
+                            <small id="description" class="form-text text-muted">Explore food on a tablet like a hipster.</small>
                             <img src="https://i.dailymail.co.uk/i/pix/2015/05/10/22/288A920A00000578-0-image-m-14_1431293376749.jpg">
                             <br>
-                            <h4>Oreiller du Meringue </h4>
+                            <h4>Oreiller du Meringue $130</h4>
+                            <small id="description" class="form-text text-muted">Ask the chef before you order this.</small>
                             <img src="https://i.imgur.com/7Gkkqe7.jpg">
                             <br>
-                            <h4>Haute Pot</h4>
+                            <h4>Haute Pot $155</h4>
+                            <small id="description" class="form-text text-muted">Some kind of broth or soup served on a toilet bowl.</small>
                             <img src="https://i.pinimg.com/originals/40/ce/93/40ce930c1de282adb98cc7ab71ade534.jpg">
                         </ul>
                     </div>
