--- a/public/menu.html
+++ b/public/menu.html
@@ -52,8 +52,12 @@
                             <img src="https://i.imgur.com/7Gkkqe7.jpg">
                             <br>
                             <h4>Haute Pot $155</h4>
-                            <small id="description" class="form-text text-muted">Some kind of broth or soup served on a toilet bowl.</small>
+                            <small id="description" class="form-text text-muted"> The finest hot served in the finest pot. </small>
                             <img src="https://i.pinimg.com/originals/40/ce/93/40ce930c1de282adb98cc7ab71ade534.jpg">
+                            <br>
+                            <h4>Le Tout Poulet </h4>
+                            <small id="description" class="form-text text-muted"> This chicken has been tanned to a fine golden brown. </small>
+                            <img src="https://i.imgur.com/odSkFpr.jpg">
                         </ul>
                     </div>
                 </div>
