--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,9 @@
 			<br>
 
 			<div class="text-center">
-				<a href="tables.html"><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button></a>
-				<a href="reserve.html"><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button></a>
-				<a href="menu.html"><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-list-alt"></span> Menu </button></a>
+				<a href="tables.html"><button type="button" class="btn btn-info"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button></a>
+				<a href="reserve.html"><button type="button" class="btn btn-info"><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button></a>
+				<a href="menu.html"><button type="button" class="btn btn-info"><span class="glyphicon glyphicon-list-alt"></span> Menu </button></a>
 
 			</div>
 
