--- a/public/menu.html
+++ b/public/menu.html
@@ -21,16 +21,16 @@
             <br>
             <div class="text-center">
                 <a href="reserve.html">
-                    <button class="btn btn-lg btn-primary">
+                    <button class="btn btn-info">
                         <span class="fa fa-credit-card"></span> Make Reservation</button>
                 </a>
                 <a href="index.html">
-                    <button class="btn btn-lg btn-default">
+                    <button class="btn btn-info">
                         <span class="fa fa-home"></span>
                     </button>
                 </a>
                 <a href="menu.html">
-                        <button class="btn btn-lg btn-primary">
+                        <button class="btn btn-info">
                             <span class="fa fa-credit-card"></span> Menu </button>
                     </a>
             </div>
@@ -55,7 +55,7 @@
                             <small id="description" class="form-text text-muted"> The finest hot served in the finest pot. </small>
                             <img src="https://i.pinimg.com/originals/40/ce/93/40ce930c1de282adb98cc7ab71ade534.jpg">
                             <br>
-                            <h4>Le Tout Poulet </h4>
+                            <h4>Le Tout Poulet $110</h4>
                             <small id="description" class="form-text text-muted"> This chicken has been tanned to a fine golden brown. </small>
                             <img src="https://i.imgur.com/odSkFpr.jpg">
                         </ul>
