--- a/public/reserve.html
+++ b/public/reserve.html
@@ -22,9 +22,9 @@
 			<br>
 
 			<div class="text-center">
-				<a href="tables.html"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button></a>
-				<a href="index.html"><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-home"></span></button></a>
-				<a href="menu.html"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-list-alt"></span> Menu </button></a>
+				<a href="tables.html"><button type="button" class="btn btn-info"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button></a>
+				<a href="index.html"><button type="button" class="btn btn-info"><span class="glyphicon glyphicon-home"></span></button></a>
+				<a href="menu.html"><button type="button" class="btn btn-info"><span class="glyphicon glyphicon-list-alt"></span> Menu </button></a>
 			</div>
 		</div>
 
