--- a/public/tables.html
+++ b/public/tables.html
@@ -21,16 +21,16 @@
             <br>
             <div class="text-center">
                 <a href="reserve.html">
-                    <button class="btn btn-lg btn-primary">
+                    <button class="btn btn-info">
                         <span class="fa fa-credit-card"></span> Make Reservation</button>
                 </a>
                 <a href="index.html">
-                    <button class="btn btn-lg btn-primary">
+                    <button class="btn btn-info">
                         <span class="fa fa-home"></span>
                     </button>
                 </a>
                 <a href="reserve.html">
-                        <button class="btn btn-lg btn-primary">
+                        <button class="btn btn-info">
                             <span class="fa fa-credit-card"></span> Menu </button>
                 </a>
             </div>
